--- a/app/index.html
+++ b/app/index.html
@@ -43,10 +43,7 @@
     <div class="landingPage__wrapper-intro">
       <div class="landingPage__wrapper-intro--text">
         <h1>Welcome.</h1>
-        <div class="landingPage__wrapper-desc">
-          <!-- <div class="landingPage__wrapper-circle"></div> -->
-          <p>This is my personal homepage <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut officia numquam cum magnam eos maxime, illo optio facere officiis velit, dolorem mollitia ducimus. Dignissimos, vero, recusandae. Non sit vel molestiae!</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste commodi, reprehenderit nobis, numquam magni esse, voluptatibus necessitatibus illo deleniti accusamus modi inventore. Dignissimos fuga voluptas recusandae autem fugiat totam quasi!</p>
-        </div>
+        <p class="landingPage__wrapper-desc">This is my personal homepage Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste commodi, reprehenderit nobis, numquam magni esse, voluptatibus necessitatibus illo deleniti accusamus modi inventore. Dignissimos fuga voluptas recusandae autem fugiat totam quasi!</p>
       </div>
 
       <div class="landingPage__wrapper-menu">
