--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
     <div class="landingPage__wrapper-intro">
       <div class="landingPage__wrapper-intro--text">
         <h1>Welcome.</h1>
+        <div class="landingPage__wrapper-divider"></div>
         <p class="landingPage__wrapper-desc">This is my personal homepage Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste commodi, reprehenderit nobis, numquam magni esse, voluptatibus necessitatibus illo deleniti accusamus modi inventore. Dignissimos fuga voluptas recusandae autem fugiat totam quasi!</p>
       </div>
 
