Welcome message re-designed, lots of responsive fixes.

--- a/app/index.html
+++ b/app/index.html
@@ -43,18 +43,18 @@
     <div class="landingPage__wrapper-intro">
       <div class="landingPage__wrapper-intro--text">
         <h1>Welcome.</h1>
-        <div class="landingPage__wrapper-divider"></div>
-        <p class="landingPage__wrapper-desc">This is my personal homepage Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste commodi, reprehenderit nobis, numquam magni esse, voluptatibus necessitatibus illo deleniti accusamus modi inventore. Dignissimos fuga voluptas recusandae autem fugiat totam quasi!</p>
+        <div class="landingPage__wrapper-divider--horizontal"></div>
+        <p class="landingPage__wrapper-desc">I'm Simon, a front-end developer located in Sweden. The page you are looking at now is my evolving portfolio featuring information and projects. Feel free to take a look around!</p>
       </div>
 
-      <div class="landingPage__wrapper-menu">
+      <!-- <div class="landingPage__wrapper-menu">
         <div class="menu-about">
           <span class="menu-about__text">A</span>
           <span class="menu-about__text--small">bout.</span>
         </div>
         <div class="menu-playground"></div>
         <div class="menu-portfolio"></div>
-      </div>
+      </div> -->
     </div>
 
 
