--- a/app/index.html
+++ b/app/index.html
@@ -40,21 +40,41 @@
     </div>
 
 
-    <div class="landingPage__wrapper-intro">
-      <div class="landingPage__wrapper-intro--text">
+    <div class="landingPage__wrapper">
+      <div class="landingPage__wrapper-intro-text">
         <h1>Welcome.</h1>
         <div class="landingPage__wrapper-divider--horizontal"></div>
         <p class="landingPage__wrapper-desc">I'm Simon, a front-end developer located in Sweden. The page you are looking at now is my evolving portfolio featuring information and projects. Feel free to take a look around!</p>
       </div>
 
-      <!-- <div class="landingPage__wrapper-menu">
+      <!-- Delimiter -->
+      <div id="particles-js" class="particle-delimiter"></div>
+
+      <div class="wrapper-menu">
+        <!-- ABOUT -->
         <div class="menu-about">
           <span class="menu-about__text">A</span>
           <span class="menu-about__text--small">bout.</span>
         </div>
-        <div class="menu-playground"></div>
-        <div class="menu-portfolio"></div>
-      </div> -->
+
+        <!-- PORTFOLIO -->
+        <div class="menu-portfolio">
+          <span class="menu-portfolio__text">P</span>
+          <span class="menu-portfolio__text--small">ortfolio.</span>
+        </div>
+
+        <!-- WORK -->
+        <div class="menu-work">
+          <span class="menu-work__text">W</span>
+          <span class="menu-work__text--small">ork.</span>
+        </div>
+
+        <!-- CONTACT -->
+        <div class="menu-contact">
+          <span class="menu-contact__text">C</span>
+          <span class="menu-contact__text--small">ontact.</span>
+        </div>
+      </div>
     </div>
 
 
@@ -84,6 +104,7 @@
     <script src="/bower_components/gsap/src/uncompressed/TweenMax.js"></script>
     <script src="/bower_components/scrollmagic/scrollmagic/uncompressed/ScrollMagic.js"></script>
     <script src="/bower_components/trianglify/dist/trianglify.min.js"></script>
+    <script src="/bower_components/particles.js/particles.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
