--- a/app/index.html
+++ b/app/index.html
@@ -39,41 +39,65 @@
       <div class="diamond diamond-6"></div>
     </div>
 
+    <div class="page-container">
+      <div class="landingPage__wrapper">
+        <div class="landingPage__wrapper-intro-text">
+          <h1>Welcome.</h1>
+          <div class="landingPage__wrapper-divider--horizontal"></div>
+          <p class="landingPage__wrapper-desc">I'm Simon, a front-end developer located in Sweden. The page you are looking at now is my evolving portfolio featuring information and projects. Feel free to take a look around!</p>
+        </div>
 
-    <div class="landingPage__wrapper">
-      <div class="landingPage__wrapper-intro-text">
-        <h1>Welcome.</h1>
-        <div class="landingPage__wrapper-divider--horizontal"></div>
-        <p class="landingPage__wrapper-desc">I'm Simon, a front-end developer located in Sweden. The page you are looking at now is my evolving portfolio featuring information and projects. Feel free to take a look around!</p>
+        <!-- Delimiter -->
+        <div id="particles-landing" class="particle-delimiter --landing"></div>
+
+        <div class="wrapper-menu">
+          <!-- Menu About -->
+          <div class="menu-about">
+            <span class="menu-about__text">A</span>
+            <span class="menu-about__text--small">bout.</span>
+          </div>
+
+          <!-- Menu Portfolio -->
+          <div class="menu-portfolio">
+            <span class="menu-portfolio__text">P</span>
+            <span class="menu-portfolio__text--small">ortfolio.</span>
+          </div>
+
+          <!-- Menu Work -->
+          <div class="menu-work">
+            <span class="menu-work__text">W</span>
+            <span class="menu-work__text--small">ork.</span>
+          </div>
+
+          <!-- Menu Contact -->
+          <div class="menu-contact">
+            <span class="menu-contact__text">C</span>
+            <span class="menu-contact__text--small">ontact.</span>
+          </div>
+        </div>
       </div>
 
       <!-- Delimiter -->
-      <div id="particles-js" class="particle-delimiter"></div>
+      <div id="particles-menu" class="particle-delimiter --menu"></div>
 
-      <div class="wrapper-menu">
-        <!-- ABOUT -->
-        <div class="menu-about">
-          <span class="menu-about__text">A</span>
-          <span class="menu-about__text--small">bout.</span>
-        </div>
+      <!-- ABOUT container -->
+      <div class="about-container">
+        <h1>ABOUT.</h1>
+      </div>
 
-        <!-- PORTFOLIO -->
-        <div class="menu-portfolio">
-          <span class="menu-portfolio__text">P</span>
-          <span class="menu-portfolio__text--small">ortfolio.</span>
-        </div>
+      <!-- PORTFOLIO container -->
+      <div class="portfolio-container">
+        <h1>PORTFOLIO.</h1>
+      </div>
 
-        <!-- WORK -->
-        <div class="menu-work">
-          <span class="menu-work__text">W</span>
-          <span class="menu-work__text--small">ork.</span>
-        </div>
+      <!-- WORK container -->
+      <div class="work-container">
+        <h1>WORK.</h1>
+      </div>
 
-        <!-- CONTACT -->
-        <div class="menu-contact">
-          <span class="menu-contact__text">C</span>
-          <span class="menu-contact__text--small">ontact.</span>
-        </div>
+      <!-- CONTACT container -->
+      <div class="contact-container">
+        <h1>CONTACT.</h1>
       </div>
     </div>
 
