--- a/app/index.html
+++ b/app/index.html
@@ -81,24 +81,44 @@
       <div id="particles-menu" class="particle-delimiter --menu"></div>
 
       <!-- ABOUT container -->
-      <div class="about-container">
-        <h1>ABOUT.</h1>
-      </div>
+      <section class="about-section">
+        <h1 class="about-header">About.</h1>
+        <p class="about-text"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex nulla modi sed consectetur, quae architecto expedita obcaecati illum aspernatur molestiae cumque eius, veritatis similique voluptatibus voluptate nihil numquam consequuntur. Voluptatum!</span>
+        <span>Ipsa fugiat dolorem dolore nam pariatur excepturi quibusdam fugit obcaecati non ratione officiis distinctio amet officia laudantium laboriosam at, ullam assumenda temporibus dignissimos iste soluta aperiam illum facilis autem. Voluptatum!</span>
+        <span>Cumque asperiores consequatur quam error hic, voluptate, autem corrupti architecto voluptas quod fuga repellat minus eveniet nam! Reprehenderit dolore voluptatum maxime autem mollitia hic aspernatur repudiandae optio rem. Inventore, hic.</span>
+        <span>Repellendus molestiae dicta odio maiores fuga eos sequi suscipit totam voluptate. Maxime eligendi perferendis soluta. Sapiente eligendi, iure, similique ex saepe ea accusantium doloribus repellat totam quidem atque sit porro.</span>
+        <span>Veniam temporibus molestiae accusamus, nostrum itaque nisi assumenda? Laborum, magnam quisquam commodi enim nostrum hic cupiditate quasi ad aliquid qui saepe iure veritatis dolorum omnis rerum quod fuga deleniti quaerat?</span></p>
+      </section>
 
       <!-- PORTFOLIO container -->
-      <div class="portfolio-container">
-        <h1>PORTFOLIO.</h1>
-      </div>
+      <section class="portfolio-section">
+        <h1 class="portfolio-header">Portfolio.</h1>
+        <p class="portfolio-text"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo tempora odit, sapiente mollitia, aut odio reprehenderit necessitatibus, voluptas eum velit veniam harum laboriosam. Nemo corrupti nostrum doloribus, expedita vitae rem!</span>
+        <span>Architecto repudiandae autem laborum libero consequuntur laboriosam natus enim minima commodi corporis, distinctio cum illum exercitationem quod qui, ex eum dicta magni nam omnis eaque reprehenderit! Aut tempora asperiores illo!</span>
+        <span>Nemo vel optio nihil distinctio, consequuntur minus voluptates? Repellendus quae mollitia blanditiis tempora in deserunt voluptatum ducimus animi praesentium quidem porro, unde quas corrupti cumque quo repellat totam odit, ea.</span>
+        <span>Sequi illum quae, iste excepturi sapiente aliquid veritatis laudantium, delectus aliquam tempora, ipsa possimus saepe unde soluta quis laborum obcaecati? Pariatur, possimus nobis odio nulla vero sapiente soluta alias dolorem?</span>
+        <span>In quaerat dolorem excepturi a, delectus illo atque dolor voluptatum unde cupiditate ex eos, cum porro maiores obcaecati dignissimos quo, ipsa error! Veritatis ad laboriosam voluptates. Commodi quis eligendi labore.</span></p>
+      </section>
 
       <!-- WORK container -->
-      <div class="work-container">
-        <h1>WORK.</h1>
-      </div>
+      <section class="work-section">
+        <h1 class="work-header">Work.</h1>
+        <p class="work-text"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit labore officia ab molestias, animi asperiores repellendus velit ratione. Repellat amet qui atque architecto aspernatur nulla neque facilis rerum non magni!</span>
+        <span>Aut aspernatur ratione excepturi optio modi quia, impedit eaque enim rerum culpa commodi, sapiente ut distinctio maxime nostrum aperiam possimus laborum? Cupiditate fuga, suscipit. Voluptatum perspiciatis cum, commodi soluta optio.</span>
+        <span>Animi iste voluptatibus, illum magnam distinctio incidunt laudantium eum necessitatibus! Nulla quo porro libero, praesentium quisquam minus earum nobis laboriosam! Reiciendis neque voluptates, minus temporibus odit modi sunt nostrum deserunt.</span>
+        <span>Possimus, aperiam facilis, similique temporibus tempora cum. Recusandae, quae, porro. Temporibus dolorum accusantium dolorem a minus soluta quibusdam cupiditate recusandae expedita facere placeat ut vel ex laudantium, incidunt alias maxime!</span>
+        <span>Consectetur autem praesentium eveniet in nostrum laboriosam quo minima nesciunt omnis esse. Libero debitis quisquam quae sequi esse officia incidunt ad odit reiciendis, deleniti saepe cupiditate sed voluptatum, amet vel!</span></p>
+      </section>
 
       <!-- CONTACT container -->
-      <div class="contact-container">
-        <h1>CONTACT.</h1>
-      </div>
+      <section class="contact-section">
+        <h1 class="contact-header">Contact.</h1>
+        <p class="contact-text"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit natus facilis hic minus deserunt fugiat rem dicta ea nulla incidunt numquam iusto dignissimos velit nisi corporis animi eligendi impedit, ad!</span>
+        <span>Voluptate harum, impedit consectetur eligendi cumque debitis numquam eos reprehenderit sed expedita cum neque, a, quaerat quas sapiente mollitia illo, delectus officiis maiores aliquam recusandae rem. Aspernatur, non, sed! Dolor?</span>
+        <span>Nemo earum animi vel atque debitis, vero at unde ut, dolorem fuga quidem voluptate harum impedit quibusdam assumenda eveniet. Aspernatur id obcaecati, impedit aliquid repudiandae quos ab a reiciendis optio.</span>
+        <span>Ratione repellendus reiciendis explicabo aut! Minima laboriosam magni quae similique corporis suscipit, cupiditate magnam hic nesciunt ex aut culpa sed laudantium nihil, dicta omnis beatae quisquam possimus alias facere unde.</span>
+        <span>Omnis, molestiae temporibus assumenda ducimus voluptates vitae! A cumque quasi soluta debitis, quae laboriosam at quia expedita recusandae officia quaerat labore dicta nesciunt voluptatem incidunt suscipit? Amet nesciunt provident assumenda.</span></p>
+      </section>
     </div>
 
 
