removed link styling

--- a/app/index.html
+++ b/app/index.html
@@ -52,28 +52,28 @@
 
         <div class="wrapper-menu">
           <!-- Menu About -->
-          <div class="menu-about">
+          <a href="#about" class="menu-about">
             <span class="menu-about__text">A</span>
             <span class="menu-about__text--small">bout.</span>
-          </div>
+          </a>
 
           <!-- Menu Portfolio -->
-          <div class="menu-portfolio">
+          <a href="#portfolio" class="menu-portfolio">
             <span class="menu-portfolio__text">P</span>
             <span class="menu-portfolio__text--small">ortfolio.</span>
-          </div>
+          </a>
 
           <!-- Menu Work -->
-          <div class="menu-work">
+          <a href="#work" class="menu-work">
             <span class="menu-work__text">W</span>
             <span class="menu-work__text--small">ork.</span>
-          </div>
+          </a>
 
           <!-- Menu Contact -->
-          <div class="menu-contact">
+          <a href="#contact" class="menu-contact">
             <span class="menu-contact__text">C</span>
             <span class="menu-contact__text--small">ontact.</span>
-          </div>
+          </a>
         </div>
       </div>
 
