scroll in progress

--- a/app/index.html
+++ b/app/index.html
@@ -81,7 +81,7 @@
       <div id="particles-menu" class="particle-delimiter --menu"></div>
 
       <!-- ABOUT container -->
-      <section class="about-section">
+      <section id="about" class="about-section">
         <h1 class="about-header">About.</h1>
         <p class="about-text"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex nulla modi sed consectetur, quae architecto expedita obcaecati illum aspernatur molestiae cumque eius, veritatis similique voluptatibus voluptate nihil numquam consequuntur. Voluptatum!</span>
         <span>Ipsa fugiat dolorem dolore nam pariatur excepturi quibusdam fugit obcaecati non ratione officiis distinctio amet officia laudantium laboriosam at, ullam assumenda temporibus dignissimos iste soluta aperiam illum facilis autem. Voluptatum!</span>
@@ -91,7 +91,7 @@
       </section>
 
       <!-- PORTFOLIO container -->
-      <section class="portfolio-section">
+      <section id="portfolio" class="portfolio-section">
         <h1 class="portfolio-header">Portfolio.</h1>
         <p class="portfolio-text"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo tempora odit, sapiente mollitia, aut odio reprehenderit necessitatibus, voluptas eum velit veniam harum laboriosam. Nemo corrupti nostrum doloribus, expedita vitae rem!</span>
         <span>Architecto repudiandae autem laborum libero consequuntur laboriosam natus enim minima commodi corporis, distinctio cum illum exercitationem quod qui, ex eum dicta magni nam omnis eaque reprehenderit! Aut tempora asperiores illo!</span>
@@ -101,7 +101,7 @@
       </section>
 
       <!-- WORK container -->
-      <section class="work-section">
+      <section id="work" class="work-section">
         <h1 class="work-header">Work.</h1>
         <p class="work-text"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit labore officia ab molestias, animi asperiores repellendus velit ratione. Repellat amet qui atque architecto aspernatur nulla neque facilis rerum non magni!</span>
         <span>Aut aspernatur ratione excepturi optio modi quia, impedit eaque enim rerum culpa commodi, sapiente ut distinctio maxime nostrum aperiam possimus laborum? Cupiditate fuga, suscipit. Voluptatum perspiciatis cum, commodi soluta optio.</span>
@@ -111,7 +111,7 @@
       </section>
 
       <!-- CONTACT container -->
-      <section class="contact-section">
+      <section id="contact" class="contact-section">
         <h1 class="contact-header">Contact.</h1>
         <p class="contact-text"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit natus facilis hic minus deserunt fugiat rem dicta ea nulla incidunt numquam iusto dignissimos velit nisi corporis animi eligendi impedit, ad!</span>
         <span>Voluptate harum, impedit consectetur eligendi cumque debitis numquam eos reprehenderit sed expedita cum neque, a, quaerat quas sapiente mollitia illo, delectus officiis maiores aliquam recusandae rem. Aspernatur, non, sed! Dolor?</span>
