Loads of responsive fixes

--- a/app/index.html
+++ b/app/index.html
@@ -28,97 +28,98 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
+    <div class="whole-page-wrapper">
+      <div class="header">
+        <img class="logotype" src="./images/logotype.svg" alt="Logotype">
+        <div class="diamond diamond-1"></div>
+        <div class="diamond diamond-2"></div>
+        <div class="diamond diamond-3"></div>
+        <div class="diamond diamond-4"></div>
+        <div class="diamond diamond-5"></div>
+        <div class="diamond diamond-6"></div>
+      </div>
 
-    <div class="header">
-      <img class="logotype" src="./images/logotype.svg" alt="Logotype">
-      <div class="diamond diamond-1"></div>
-      <div class="diamond diamond-2"></div>
-      <div class="diamond diamond-3"></div>
-      <div class="diamond diamond-4"></div>
-      <div class="diamond diamond-5"></div>
-      <div class="diamond diamond-6"></div>
-    </div>
+      <div class="page-container">
+        <div class="landingPage__wrapper">
+          <div class="landingPage__wrapper-intro-text">
+            <h1>Welcome.</h1>
+            <div class="landingPage__wrapper-divider--horizontal"></div>
+            <p class="landingPage__wrapper-desc">I'm Simon, a front-end developer located in Sweden. The page you are looking at now is my evolving portfolio featuring information and projects. Feel free to take a look around!</p>
+          </div>
 
-    <div class="page-container">
-      <div class="landingPage__wrapper">
-        <div class="landingPage__wrapper-intro-text">
-          <h1>Welcome.</h1>
-          <div class="landingPage__wrapper-divider--horizontal"></div>
-          <p class="landingPage__wrapper-desc">I'm Simon, a front-end developer located in Sweden. The page you are looking at now is my evolving portfolio featuring information and projects. Feel free to take a look around!</p>
+          <!-- Delimiter -->
+          <div id="particles-landing" class="particle-delimiter --landing"></div>
+
+          <div class="wrapper-menu">
+            <!-- Menu About -->
+            <a href="#about" onclick="scrollToHash('#about')" class="menu-about">
+              <span class="menu-about__text">A</span>
+              <span class="menu-about__text--small">bout.</span>
+            </a>
+
+            <!-- Menu Portfolio -->
+            <a href="#portfolio" onclick="scrollToHash('#portfolio')" class="menu-portfolio">
+              <span class="menu-portfolio__text">P</span>
+              <span class="menu-portfolio__text--small">ortfolio.</span>
+            </a>
+
+            <!-- Menu Work -->
+            <a href="#work" onclick="scrollToHash('#work')" class="menu-work">
+              <span class="menu-work__text">W</span>
+              <span class="menu-work__text--small">ork.</span>
+            </a>
+
+            <!-- Menu Contact -->
+            <a href="#contact" onclick="scrollToHash('#contact')" class="menu-contact">
+              <span class="menu-contact__text">C</span>
+              <span class="menu-contact__text--small">ontact.</span>
+            </a>
+          </div>
         </div>
 
         <!-- Delimiter -->
-        <div id="particles-landing" class="particle-delimiter --landing"></div>
+        <div id="particles-menu" class="particle-delimiter --menu"></div>
 
-        <div class="wrapper-menu">
-          <!-- Menu About -->
-          <a href="#about" onclick="scrollToHash('#about')" class="menu-about">
-            <span class="menu-about__text">A</span>
-            <span class="menu-about__text--small">bout.</span>
-          </a>
+        <!-- ABOUT container -->
+        <section id="about" class="about-section">
+          <h1 class="about-header">Abou(t).</h1>
+          <p class="about-text"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex nulla modi sed consectetur, quae architecto expedita obcaecati illum aspernatur molestiae cumque eius, veritatis similique voluptatibus voluptate nihil numquam consequuntur. Voluptatum!</span>
+          <span>Ipsa fugiat dolorem dolore nam pariatur excepturi quibusdam fugit obcaecati non ratione officiis distinctio amet officia laudantium laboriosam at, ullam assumenda temporibus dignissimos iste soluta aperiam illum facilis autem. Voluptatum!</span>
+          <span>Cumque asperiores consequatur quam error hic, voluptate, autem corrupti architecto voluptas quod fuga repellat minus eveniet nam! Reprehenderit dolore voluptatum maxime autem mollitia hic aspernatur repudiandae optio rem. Inventore, hic.</span>
+          <span>Repellendus molestiae dicta odio maiores fuga eos sequi suscipit totam voluptate. Maxime eligendi perferendis soluta. Sapiente eligendi, iure, similique ex saepe ea accusantium doloribus repellat totam quidem atque sit porro.</span>
+          <span>Veniam temporibus molestiae accusamus, nostrum itaque nisi assumenda? Laborum, magnam quisquam commodi enim nostrum hic cupiditate quasi ad aliquid qui saepe iure veritatis dolorum omnis rerum quod fuga deleniti quaerat?</span></p>
+        </section>
 
-          <!-- Menu Portfolio -->
-          <a href="#portfolio" onclick="scrollToHash('#portfolio')" class="menu-portfolio">
-            <span class="menu-portfolio__text">P</span>
-            <span class="menu-portfolio__text--small">ortfolio.</span>
-          </a>
+        <!-- PORTFOLIO container -->
+        <section id="portfolio" class="portfolio-section">
+          <h1 class="portfolio-header">Portfolio.</h1>
+          <p class="portfolio-text"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo tempora odit, sapiente mollitia, aut odio reprehenderit necessitatibus, voluptas eum velit veniam harum laboriosam. Nemo corrupti nostrum doloribus, expedita vitae rem!</span>
+          <span>Architecto repudiandae autem laborum libero consequuntur laboriosam natus enim minima commodi corporis, distinctio cum illum exercitationem quod qui, ex eum dicta magni nam omnis eaque reprehenderit! Aut tempora asperiores illo!</span>
+          <span>Nemo vel optio nihil distinctio, consequuntur minus voluptates? Repellendus quae mollitia blanditiis tempora in deserunt voluptatum ducimus animi praesentium quidem porro, unde quas corrupti cumque quo repellat totam odit, ea.</span>
+          <span>Sequi illum quae, iste excepturi sapiente aliquid veritatis laudantium, delectus aliquam tempora, ipsa possimus saepe unde soluta quis laborum obcaecati? Pariatur, possimus nobis odio nulla vero sapiente soluta alias dolorem?</span>
+          <span>In quaerat dolorem excepturi a, delectus illo atque dolor voluptatum unde cupiditate ex eos, cum porro maiores obcaecati dignissimos quo, ipsa error! Veritatis ad laboriosam voluptates. Commodi quis eligendi labore.</span></p>
+        </section>
 
-          <!-- Menu Work -->
-          <a href="#work" onclick="scrollToHash('#work')" class="menu-work">
-            <span class="menu-work__text">W</span>
-            <span class="menu-work__text--small">ork.</span>
-          </a>
+        <!-- WORK container -->
+        <section id="work" class="work-section">
+          <h1 class="work-header">Work.</h1>
+          <p class="work-text"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit labore officia ab molestias, animi asperiores repellendus velit ratione. Repellat amet qui atque architecto aspernatur nulla neque facilis rerum non magni!</span>
+          <span>Aut aspernatur ratione excepturi optio modi quia, impedit eaque enim rerum culpa commodi, sapiente ut distinctio maxime nostrum aperiam possimus laborum? Cupiditate fuga, suscipit. Voluptatum perspiciatis cum, commodi soluta optio.</span>
+          <span>Animi iste voluptatibus, illum magnam distinctio incidunt laudantium eum necessitatibus! Nulla quo porro libero, praesentium quisquam minus earum nobis laboriosam! Reiciendis neque voluptates, minus temporibus odit modi sunt nostrum deserunt.</span>
+          <span>Possimus, aperiam facilis, similique temporibus tempora cum. Recusandae, quae, porro. Temporibus dolorum accusantium dolorem a minus soluta quibusdam cupiditate recusandae expedita facere placeat ut vel ex laudantium, incidunt alias maxime!</span>
+          <span>Consectetur autem praesentium eveniet in nostrum laboriosam quo minima nesciunt omnis esse. Libero debitis quisquam quae sequi esse officia incidunt ad odit reiciendis, deleniti saepe cupiditate sed voluptatum, amet vel!</span></p>
+        </section>
 
-          <!-- Menu Contact -->
-          <a href="#contact" onclick="scrollToHash('#contact')" class="menu-contact">
-            <span class="menu-contact__text">C</span>
-            <span class="menu-contact__text--small">ontact.</span>
-          </a>
-        </div>
+        <!-- CONTACT container -->
+        <section id="contact" class="contact-section">
+          <h1 class="contact-header">Contact.</h1>
+          <p class="contact-text"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit natus facilis hic minus deserunt fugiat rem dicta ea nulla incidunt numquam iusto dignissimos velit nisi corporis animi eligendi impedit, ad!</span>
+          <span>Voluptate harum, impedit consectetur eligendi cumque debitis numquam eos reprehenderit sed expedita cum neque, a, quaerat quas sapiente mollitia illo, delectus officiis maiores aliquam recusandae rem. Aspernatur, non, sed! Dolor?</span>
+          <span>Nemo earum animi vel atque debitis, vero at unde ut, dolorem fuga quidem voluptate harum impedit quibusdam assumenda eveniet. Aspernatur id obcaecati, impedit aliquid repudiandae quos ab a reiciendis optio.</span>
+          <span>Ratione repellendus reiciendis explicabo aut! Minima laboriosam magni quae similique corporis suscipit, cupiditate magnam hic nesciunt ex aut culpa sed laudantium nihil, dicta omnis beatae quisquam possimus alias facere unde.</span>
+          <span>Omnis, molestiae temporibus assumenda ducimus voluptates vitae! A cumque quasi soluta debitis, quae laboriosam at quia expedita recusandae officia quaerat labore dicta nesciunt voluptatem incidunt suscipit? Amet nesciunt provident assumenda.</span></p>
+        </section>
       </div>
-
-      <!-- Delimiter -->
-      <div id="particles-menu" class="particle-delimiter --menu"></div>
-
-      <!-- ABOUT container -->
-      <section id="about" class="about-section">
-        <h1 class="about-header">About.</h1>
-        <p class="about-text"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex nulla modi sed consectetur, quae architecto expedita obcaecati illum aspernatur molestiae cumque eius, veritatis similique voluptatibus voluptate nihil numquam consequuntur. Voluptatum!</span>
-        <span>Ipsa fugiat dolorem dolore nam pariatur excepturi quibusdam fugit obcaecati non ratione officiis distinctio amet officia laudantium laboriosam at, ullam assumenda temporibus dignissimos iste soluta aperiam illum facilis autem. Voluptatum!</span>
-        <span>Cumque asperiores consequatur quam error hic, voluptate, autem corrupti architecto voluptas quod fuga repellat minus eveniet nam! Reprehenderit dolore voluptatum maxime autem mollitia hic aspernatur repudiandae optio rem. Inventore, hic.</span>
-        <span>Repellendus molestiae dicta odio maiores fuga eos sequi suscipit totam voluptate. Maxime eligendi perferendis soluta. Sapiente eligendi, iure, similique ex saepe ea accusantium doloribus repellat totam quidem atque sit porro.</span>
-        <span>Veniam temporibus molestiae accusamus, nostrum itaque nisi assumenda? Laborum, magnam quisquam commodi enim nostrum hic cupiditate quasi ad aliquid qui saepe iure veritatis dolorum omnis rerum quod fuga deleniti quaerat?</span></p>
-      </section>
-
-      <!-- PORTFOLIO container -->
-      <section id="portfolio" class="portfolio-section">
-        <h1 class="portfolio-header">Portfolio.</h1>
-        <p class="portfolio-text"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo tempora odit, sapiente mollitia, aut odio reprehenderit necessitatibus, voluptas eum velit veniam harum laboriosam. Nemo corrupti nostrum doloribus, expedita vitae rem!</span>
-        <span>Architecto repudiandae autem laborum libero consequuntur laboriosam natus enim minima commodi corporis, distinctio cum illum exercitationem quod qui, ex eum dicta magni nam omnis eaque reprehenderit! Aut tempora asperiores illo!</span>
-        <span>Nemo vel optio nihil distinctio, consequuntur minus voluptates? Repellendus quae mollitia blanditiis tempora in deserunt voluptatum ducimus animi praesentium quidem porro, unde quas corrupti cumque quo repellat totam odit, ea.</span>
-        <span>Sequi illum quae, iste excepturi sapiente aliquid veritatis laudantium, delectus aliquam tempora, ipsa possimus saepe unde soluta quis laborum obcaecati? Pariatur, possimus nobis odio nulla vero sapiente soluta alias dolorem?</span>
-        <span>In quaerat dolorem excepturi a, delectus illo atque dolor voluptatum unde cupiditate ex eos, cum porro maiores obcaecati dignissimos quo, ipsa error! Veritatis ad laboriosam voluptates. Commodi quis eligendi labore.</span></p>
-      </section>
-
-      <!-- WORK container -->
-      <section id="work" class="work-section">
-        <h1 class="work-header">Work.</h1>
-        <p class="work-text"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit labore officia ab molestias, animi asperiores repellendus velit ratione. Repellat amet qui atque architecto aspernatur nulla neque facilis rerum non magni!</span>
-        <span>Aut aspernatur ratione excepturi optio modi quia, impedit eaque enim rerum culpa commodi, sapiente ut distinctio maxime nostrum aperiam possimus laborum? Cupiditate fuga, suscipit. Voluptatum perspiciatis cum, commodi soluta optio.</span>
-        <span>Animi iste voluptatibus, illum magnam distinctio incidunt laudantium eum necessitatibus! Nulla quo porro libero, praesentium quisquam minus earum nobis laboriosam! Reiciendis neque voluptates, minus temporibus odit modi sunt nostrum deserunt.</span>
-        <span>Possimus, aperiam facilis, similique temporibus tempora cum. Recusandae, quae, porro. Temporibus dolorum accusantium dolorem a minus soluta quibusdam cupiditate recusandae expedita facere placeat ut vel ex laudantium, incidunt alias maxime!</span>
-        <span>Consectetur autem praesentium eveniet in nostrum laboriosam quo minima nesciunt omnis esse. Libero debitis quisquam quae sequi esse officia incidunt ad odit reiciendis, deleniti saepe cupiditate sed voluptatum, amet vel!</span></p>
-      </section>
-
-      <!-- CONTACT container -->
-      <section id="contact" class="contact-section">
-        <h1 class="contact-header">Contact.</h1>
-        <p class="contact-text"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit natus facilis hic minus deserunt fugiat rem dicta ea nulla incidunt numquam iusto dignissimos velit nisi corporis animi eligendi impedit, ad!</span>
-        <span>Voluptate harum, impedit consectetur eligendi cumque debitis numquam eos reprehenderit sed expedita cum neque, a, quaerat quas sapiente mollitia illo, delectus officiis maiores aliquam recusandae rem. Aspernatur, non, sed! Dolor?</span>
-        <span>Nemo earum animi vel atque debitis, vero at unde ut, dolorem fuga quidem voluptate harum impedit quibusdam assumenda eveniet. Aspernatur id obcaecati, impedit aliquid repudiandae quos ab a reiciendis optio.</span>
-        <span>Ratione repellendus reiciendis explicabo aut! Minima laboriosam magni quae similique corporis suscipit, cupiditate magnam hic nesciunt ex aut culpa sed laudantium nihil, dicta omnis beatae quisquam possimus alias facere unde.</span>
-        <span>Omnis, molestiae temporibus assumenda ducimus voluptates vitae! A cumque quasi soluta debitis, quae laboriosam at quia expedita recusandae officia quaerat labore dicta nesciunt voluptatem incidunt suscipit? Amet nesciunt provident assumenda.</span></p>
-      </section>
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
